--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,17 @@
-version: '3'
+version: "3"
+
 services:
   app:
-    container_name: docker-node-mongo
-    restart: always
+    container_name: 'docker-mongo-and-node'
     build: .
     ports:
-      - '80:3000'
+      - "8080:3000"
     links:
       - mongo
+    restart: 'always'
+  
   mongo:
-    container_name: mongo
+    container_name: 'mongo'
     image: mongo
     ports:
-      - '27017:27017'
+      - "27017:27017"
